// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User List: Component should render correctly 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="userList.headerSubtitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="userList.headerTitle"
        values={Object {}}
      />
    }
    primaryMenuItems={Array []}
    secondaryMenuItems={Array []}
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="userList.headerSubtitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="userList.headerTitle"
        values={Object {}}
      />
    }
  >
    <PlusButton
      hideOnDesktop={false}
      id="addUserBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={true}
    noDataContent={null}
  >
    <UserList
      users={Array []}
    />
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={true}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="userList.cancel"
        values={Object {}}
      />
    </BackButton>
    <PlusButton
      hideOnDesktop={false}
      id="addUserBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`User List: Component should render correctly with users data 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="userList.headerSubtitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="userList.headerTitle"
        values={Object {}}
      />
    }
    primaryMenuItems={Array []}
    secondaryMenuItems={Array []}
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="userList.headerSubtitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="userList.headerTitle"
        values={Object {}}
      />
    }
  >
    <PlusButton
      hideOnDesktop={false}
      id="addUserBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <UserList
      users={
        Array [
          Object {
            "firstName": "John",
            "lastName": "Doe",
          },
          Object {
            "firstName": "Alan",
            "lastName": "Watts",
          },
        ]
      }
    />
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={true}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="userList.cancel"
        values={Object {}}
      />
    </BackButton>
    <PlusButton
      hideOnDesktop={false}
      id="addUserBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;
